--- a/css/style1.css
+++ b/css/style1.css
@@ -65,14 +65,16 @@ nav a:hover {
     display: flex;
     flex-direction: column;  /* Apila los elementos dentro del section verticalmente */
     height: 100%;  /* Asegura que ocupe todo el espacio disponible */
+    padding: 40px;
 }
 
 /*Estilo de la pagina de contacto*/
-#contacto{
+#contact{
     grid-area: section;
     display: flex;
     flex-direction: column;  /* Apila los elementos dentro del section verticalmente */
     height: 100%;  /* Asegura que ocupe todo el espacio disponible */
+    padding: 40px;
 }
 
 #contact form {
@@ -111,6 +113,30 @@ nav a:hover {
     display: inline-block;
     margin-top: 10px;
     color: #3498db;
+}
+
+/*Estilo para la pagina de testimonios*/    
+#testimonio {
+    grid-area: section;
+    padding: 40px;
+}
+
+.testimonios {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between; /* Espacio entre los testimonios */
+    gap: 20px;
+    margin-top: 40px;
+}
+
+.testimonio {
+    background-color: white;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 50%;
+    box-sizing: border-box;
 }
 
 /*Estilo para el aside izquierdo*/
